fix spacing

--- a/style.css
+++ b/style.css
@@ -39,7 +39,10 @@ html, body {
 
 .content ul li {
   list-style: none;
-  padding-right: 20px;
+}
+
+.content ul li:first-of-type {
+  margin-right: 20px;
 }
 
 .content p a, .content p a:visited {
